appId: com.fakeecommerce
---
- launchApp
- waitForAnimationToEnd:
    timeout: 5000
- scroll
- scroll
- tapOn:
    id: "card"
    index: 1
- tapOn: "Add to cart"
- tapOn: "Go to the cart"
- tapOn: "Checkout"
- tapOn: "Name"
- inputRandomPersonName
- tapOn: "Address"
- inputRandomPersonName
- inputText: " "
- inputRandomNumber
- tapOn:
    point: "50%,48%"
- tapOn: "Post"
- tapOn: "Courier"
- tapOn: "Order"
- tapOn: "Back to the Products"
